@@ -2,7 +2,6 @@ package dev.vepo.morphoboard.workflow;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record WorkflowResponse(long id,
                                String name,
@@ -16,13 +15,13 @@ public record WorkflowResponse(long id,
                                             .stream()
                                             .sorted(Comparator.comparing(WorkflowStatus::getId))
                                             .map(WorkflowStatus::getName)
-                                            .collect(Collectors.toList()),
+                                            .toList(),
                                     workflow.getStart()
                                             .getName(),
                                     workflow.getTransitions()
                                             .stream()
                                             .map(transition -> new TransitionResponse(transition.getFrom().getName(),
                                                                                       transition.getTo().getName()))
-                                            .collect(Collectors.toList()));
+                                            .toList());
     }
 }
